<resources>
    <string name="app_name">KendoQuizV1.1337</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="kendo_quiz">This is Kendo quiz</string>
    <string name="quiz_start">Start quiz</string>
    <string name="quiz_rules">Rules</string>
    <string name="quiz_quit">Quit</string>
    <string name="quiz_statistics">Statistics</string>
    <string name="overall_correct">Overall correct answers: </string>
    <string name="overall_mistakes">Overall incorrect answers: </string>
    <string name="total_tests">Passed the tests:</string>
    <string name="share_statistics">Share</string>
    <string name="find_out_more">Find out more</string>
    <string name="kendo_guide">KendoGuide</string>
    <string name="ajkf_links">AJKF Links</string>
    <string name="youtube">YouTube</string>
    <string name="site">Site</string>
    <string name="restart">Restart</string>
    <string name="clear_stat">Clear statistics</string>
    <string name="the_kendo_quiz">The kendo quiz</string>
    <string name="check_answer">Check</string>
    <string name="counter_text">Correct: 0 \ Incorrect: 0</string>
    <string name="the_hint">Enter Answer</string>
    <string name="restart_btn">Restart</string>
    <string name="restart_text">To restart, press button\nTo go back press arrow</string>

    <string name="rules1_descr">
        This quiz contains single-answer, multiple choice questions.
        \nAlso, there are question with a free answer and the question about he image.
        \nTotally, you will be asked 4 questions about kendo
    </string>

    <string name="question_1">What is the name of bamboo sword used in Kendo</string>
    <string name="quest1_ans1">Bokuto</string>
    <string name="quest1_ans2">Shinai</string>
    <string name="quest1_ans3">Shinken</string>

    <string name="quest2_ans1">Bokuto</string>
    <string name="quest2_ans2">Tachi</string>
    <string name="quest2_ans3">Bokken</string>
    <string name="quest2_ans4">Iaito</string>
</resources>