<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main"
    tools:theme="@style/Theme.KendoQuizV1337">

    <TextView
        android:id="@+id/WelcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/theSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/kendo_quiz"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/WelcomeMsg"
        app:layout_constraintStart_toStartOf="@+id/WelcomeMsg"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeMsg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/quiz_start"
        app:layout_constraintEnd_toEndOf="@+id/theSubtitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/theSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/theSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStatistics"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/quiz_statistics"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRules"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/quiz_rules"
        app:layout_constraintEnd_toEndOf="@+id/btnStart"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnStatistics"
        app:layout_constraintTop_toBottomOf="@+id/btnStatistics" />


</androidx.constraintlayout.widget.ConstraintLayout>