<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinksActivity">

    <ImageView
        android:id="@+id/imageArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView8"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/find_out_more"
        app:layout_constraintBottom_toBottomOf="@+id/imageArrow"
        app:layout_constraintStart_toEndOf="@+id/imageArrow"
        app:layout_constraintTop_toTopOf="@+id/imageArrow" />

    <TextView
        android:id="@+id/textView9"
        style="@style/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="15dp"
        android:text="@string/kendo_guide"
        app:layout_constraintStart_toStartOf="@+id/imageArrow"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        style="@style/text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="230dp"
        android:text="@string/ajkf_links"
        app:layout_constraintStart_toStartOf="@+id/imageArrow"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYouTube1"
        style="@style/btnStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/youtube"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSite1"
        style="@style/btnStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:text="@string/site"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnYouTube1"
        app:layout_constraintTop_toBottomOf="@+id/btnYouTube1"  />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYouTube2"
        style="@style/btnStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/youtube"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSite2"
        style="@style/btnStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:text="@string/site"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnYouTube2"
        app:layout_constraintTop_toBottomOf="@+id/btnYouTube2"  />


</androidx.constraintlayout.widget.ConstraintLayout>